# s300-pager

./: .dockerignore  .gitignore  .importlinter  Dockerfile  docker-compose.yaml  pyproject.toml
src/telegram_bot/: config.py  main.py
src/telegram_bot/application/: services.py
src/telegram_bot/di/: providers.py
src/telegram_bot/domain/: __init__.py  entities.py  use_cases.py
src/telegram_bot/infrastructure/auth/: http_adapter.py
src/telegram_bot/infrastructure/jwt/: jwt_decoder_adapter.py
src/telegram_bot/infrastructure/kafka/: consumer_adapter.py  producer_adapter.py
src/telegram_bot/infrastructure/qr/: webapp_adapter.py
src/telegram_bot/infrastructure/redis/: storage_adapter.py
src/telegram_bot/infrastructure/telegram/: bot_adapter.py
src/telegram_bot/nginx/: default.conf
src/telegram_bot/ports/: __init__.py  auth_port.py  event_port.py  jwt_decoder_port.py  message_port.py  redis_storage_port.py  storage_port.py
src/telegram_bot/ports/kafka/: consumer_port.py  producer_port.py
src/telegram_bot/webapp/: index.html  script.js  style.css
