[project]
name = "s300-pager"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "aiogram>=3.23.0",
    "aiokafka>=0.12.0",
    #    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "aiohttp>=3.13.2",
    "structlog>=25.5.0",
    "dishka>=1.7.2",
    "redis>=7.1.0",
    "pyjwt>=2.10.1",
]

[tool.uv]

[tool.uv.sources]
telegram_bot = { path = "src/telegram_bot", editable = true }

[dependency-groups]
dev = [
    "import-linter>=2.8",
]
